--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "react-helmet": "^6.1.0",
     "react-paypal-button-v2": "^2.6.3",
     "react-redux": "^7.2.4",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
     "redux-devtools-extension": "^2.13.9",
@@ -22,7 +23,6 @@
   "optionalDependencies": {
     "fsevents": "2.3.2"
   },
-  
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
