--- a/package.json
+++ b/package.json
@@ -31,14 +31,14 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.5",
     "morgan": "^1.10.0",
-    "multer": "^1.4.3"
+    "multer": "^1.4.3",
+    "react-router-dom": "^6.2.1"
   },
   "devDependencies": {
     "concurrently": "^6.2.0",
     "nodemon": "^2.0.12"
   },
-  
-    "optionalDependencies": {
-      "fsevents": "2.3.2"
-    }
+  "optionalDependencies": {
+    "fsevents": "2.3.2"
+  }
 }
