--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mongoose": "^5.13.5",
     "morgan": "^1.10.0",
     "multer": "^1.4.3",
+    "react-router-bootstrap": "^0.26.0",
     "react-router-dom": "^6.2.1"
   },
   "devDependencies": {
